[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["Tiiawss <tiia.nylen@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_testi"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
